[package]
name = "vrcamdump"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
openvr_sys = "2.0.3"
winapi = { version = "0.3.9", features = ["d3d11", "d3dcommon", "dxgiformat", "dxgitype"] }
winreg = "0.9.0"


